:bug: spacing bug fixes cta

--- a/src/_assets/scss/partials/_service.scss
+++ b/src/_assets/scss/partials/_service.scss
@@ -178,7 +178,7 @@
         }
     }
     #section_9 {
-        @extend .pb-0, .mb-0;
+        @extend .py-0, .mb-0;
     }
     #section_10 {
         @extend .pb-5, .pt-0, .mb-4;
